# valr_api

./: .gitignore  CLAUDE.md  LICENSE  README.md  hello.py  mypy.ini  pyproject.toml  requirements-dev.txt  run_tests.bat  setup.cfg  setup.py
.github/workflows/: python-tests.yml
docs/: index.md  installation.md  quickstart.md
tests/: conftest.py  test_auth.py  test_client.py
valr_api/: __init__.py  client.py
valr_api/api/: __init__.py  account.py  market_data.py  public.py  wallet.py
valr_api/exceptions/: __init__.py  exceptions.py
valr_api/utils/: __init__.py  auth.py
